<resources>
    <string name="app_name">Puzzle Number Eight</string>
    <string name="start_game">START GAME</string>
    <string name="exit_game">Exit</string>
    <string name="how_to_play">How to Play</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms of Use</string>
    <string name="game_over">GAME OVER</string>
    <string name="resume_game">Resume Game</string>
    <string name="start_new_game">Main Menu</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="back">Back</string>
    <string name="privacy_agree">"I have read and accept the Privacy Policy  "</string>
    <string name="tcs_agree">"I have read and agree to the Terms of Use  "</string>
    <string name="game_options">GAME OPTIONS</string>
    <string name="pause_game">GAME PAUSED</string>
    <string name="play">Play</string>
    <string name="score">SCORE</string>
    <string name="colors">Colors</string>
    <string name="game_speed">Game Speed</string>
    <string name="dark_green">Dark Green</string>
    <string name="light_green">Light Green</string>
    <string name="sound_vol">Sound Volume</string>
    <string name="reset_high_score">Reset High Score</string>
    <string name="main_menu">Main Menu</string>
    <string name="intro_exception01">Please read the Terms Of Use at:</string>
    <string name="intro_exception02">https://www.blackseedapps.net/puzzle-number-eight-terms-of-use/</string>
    <string name="intro_exception03">Please read the Privacy Policy at:</string>
    <string name="intro_exception04">https://www.blackseedapps.net/privacy-policy/</string>
</resources>