<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OptionsFragment">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/fb03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/buttonsLinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/titleOptionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:fontFamily="@font/aldrich"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/omTitle"
            >

            <TextView
                android:id="@+id/gameOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lb_default_brand_color"
                android:fontFamily="@font/aldrich"
                android:padding="5dp"
                android:text="@string/game_options"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/omTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo03"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bsTitle"
            app:layout_constraintBottom_toTopOf="@+id/titleOptionsLinearLayout"
            />


        <LinearLayout
            android:id="@+id/optionsButtonsLinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/aldrich"
            android:background="@color/lb_error_message"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/buttonResetHighScore"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="2dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/reset_high_score"
                app:layout_constraintBottom_toTopOf="@+id/buttonOptions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPlay2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lb_error_message"
            android:orientation="vertical"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/omTitle"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout02"
            >

            <LinearLayout
                android:id="@+id/frameLayoutSoundVol"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/frameLayoutGameSpeed"
                >

                <TextView
                    android:id="@+id/textViewSoundVol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/background_light"
                    android:fontFamily="@font/aldrich"
                    android:padding="10dp"
                    android:text="@string/sound_vol"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/seekBarGameSpeed"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBarSoundVol"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@android:color/darker_gray"
                    android:max="4"
                    android:progress="2"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSoundVol" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frameLayout01"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/omTitle"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout02"
                >

                <TextView
                    android:id="@+id/textViewGameSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/background_light"
                    android:fontFamily="@font/aldrich"
                    android:padding="10dp"
                    android:text="@string/game_speed"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/seekBar3"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBar3"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@android:color/darker_gray"
                    android:max="4"
                    android:progress="2"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionsButtonsLinearLayout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/aldrich"
            android:background="@color/lb_error_message"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/buttonPlay2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="2dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/main_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttonHowToPlay"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>